[package]
name = "Riven"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "Riven-OfflineRender",
    "Riven-RealTime",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.2"
rand = "0.9.0-alpha.2"
Riven-OfflineRender = {path = "Riven-OfflineRender"}
